--- a/information/basic/index.html
+++ b/information/basic/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Information-base</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="/assets/js/main.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -43,7 +43,7 @@
             </div>
 
             <div class="nav_brand">
-                <h3>Home</h3>
+                <h3>Basic information</h3>
             </div>
 
             <input type="checkbox" name="" hidden class="nav__mobile_input" id="nav_mobile_input">
@@ -67,23 +67,15 @@
         </div>
 
 
-        <div class="content">
-            <h1>Home</h1>
-
-            <h2>Web for Rem</h2>
-
-            <div class=between>
-                <img src="/assets/img/home/1.jpg" class="between width-300px d-block margin-10px-between" alt="">
-                <img src="/assets/img/home/2.jpg" class="between width-300px d-block margin-10px-between" alt="">
-                <img src="/assets/img/home/3.jpg" class="between width-300px d-block margin-10px-between" alt="">
-                <img src="/assets/img/home/4.jpg" class="between width-300px d-block margin-10px-between" alt="">
-                <img src="/assets/img/home/5.jpg" class="between width-300px d-block margin-10px-between" alt="">
-                <img src="/assets/img/home/6.jpg" class="between width-300px d-block margin-10px-between" alt="">
-                <img src="/assets/img/home/7.jpg" class="between width-300px d-block margin-10px-between" alt="">
-                <img src="/assets/img/home/8.jpg" class="between width-300px d-block margin-10px-between" alt="">
-                <img src="/assets/img/home/9.jpg" class="between width-300px d-block margin-10px-between" alt="">
-                <img src="/assets/img/home/10.jpg" class="between width-300px d-block margin-10px-between" alt="">
-            </div>
+        <div class="content between width-700px">
+            <h1>Information-basic</h1>
+            <ul>
+                <li>Tên: Rem</li>
+                <li>Tuổi: 18</li>
+                <li>Chủng tộc: Oni</li>
+                <li>Chiều cao: 154cm</li>
+                <li>Gia đình: Quark (cha), Temae (mẹ), Ram (chị sinh đôi)</li>
+            </ul>
         </div>
 
         <!-- <div class="height-test"></div> -->
