--- a/wallpaper/other/index.html
+++ b/wallpaper/other/index.html
@@ -7,17 +7,20 @@
     <title>Other wallpaper</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="/assets/js/main.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="main">
         <div class="header">
-            <ul class="nav">
+            <!-- this is nav-pc -->
+            <ul class="nav_pc">
                 <li class="nav-item"><a href="/home/" class="nav-link">Home</a></li>
 
                 <ul class="nav-item-dropdown">
                     <a href="#" class="nav-link">Information</a>
                     <li class="nav-item-dropdown-content">
-                        <a href="/information/base/">Base</a>
+                        <a href="/information/basic/">Basic</a>
                         <a href="/information/detail/">Detail</a>
                     </li>
                 </ul>
@@ -30,6 +33,37 @@
                     </li>
                 </ul>
             </ul>
+
+            <!-- this is nav-mobile -->
+
+            <div class="bars">
+                <label for="nav_mobile_input" class="material-symbols-outlined">
+                    menu
+                </label>                    
+            </div>
+
+            <div class="nav_brand">
+                <h3>Other wallpaper</h3>
+            </div>
+
+            <input type="checkbox" name="" hidden class="nav__mobile_input" id="nav_mobile_input">
+
+            <label for="nav_mobile_input" class="nav_overlay"></label>
+
+            <div class="nav_mobile">
+                <div class="nav_mobile_close_btn">
+                    <label for="nav_mobile_input" class="material-symbols-outlined">
+                        close
+                    </label>                        
+                </div>
+                <ul class="nav_mobile_list">
+                    <li class="nav_mobile_item"><a href="/home/" class="nav_mobile_link">Home</a></li>
+                    <li class="nav_mobile_item"><a href="/information/basic/" class="nav_mobile_link">Basic Information</a></li>
+                    <li class="nav_mobile_item"><a href="/information/detail/" class="nav_mobile_link">Detail Information</a></li>
+                    <li class="nav_mobile_item"><a href="/wallpaper/aesthetic/" class="nav_mobile_link">Aesthetic wallpaper</a></li>
+                    <li class="nav_mobile_item"><a href="/wallpaper/other/" class="nav_mobile_link">Other wallpaper</a></li>
+                </ul>
+            </div>
         </div>
 
 
