--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caution</title>
+    <title>Hello</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="/assets/js/main.js"></script>
+    <link rel="icon" href="/assets/img/icon/icon.jpg" type="image/icon type">
 </head>
 <body>
     <div class="main">
-        <div class="content between width-1000px">
-            <h1>Caution</h1>
-            <p>
-                This web created for pc. <br>
-                If you use mobile, click <a href="#" onclick="mobile_users()">here</a>.  <br>
-                If you use PC, click <a href="#" onclick="pc_users()">here</a>. <br>
-            </p>
+        <div class="content">
+            <h1>Hello</h1>
+            <h3>Do you continue ?</h3>
+            <button onclick="welcome()" class="btn btn-success">Yes</button>
+            <button onclick="exit()" class="btn btn-error">No</button>
         </div>
     </div>
 </body>
