--- a/wallpaper/aesthetic/index.html
+++ b/wallpaper/aesthetic/index.html
@@ -9,6 +9,7 @@
     <script src="/assets/js/main.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="icon" href="/assets/img/icon/icon.jpg" type="image/icon type">
 </head>
 <body>
     <div class="main">
@@ -71,20 +72,22 @@
             <h1>Aesthetic wallpaper</h1>
 
             <p>Note: Click the image to download</p>
-            <a href="/assets/img/wallpaper/aesthetic/1.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/1.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/2.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/2.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/3.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/3.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/4.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/4.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/5.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/5.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/6.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/6.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/7.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/7.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/9.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/9.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/10.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/10.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/11.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/11.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/12.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/12.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/13.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/13.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/14.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/14.jpg" alt=""></a>
-            <a href="/assets/img/wallpaper/aesthetic/15.jpg" download><img class="width-300px margin-10px" src="/assets/img/wallpaper/aesthetic/15.jpg" alt=""></a>
+            <div class="img-flexbox">
+                <a href="/assets/img/wallpaper/aesthetic/1.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/1.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/2.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/2.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/3.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/3.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/4.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/4.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/5.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/5.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/6.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/6.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/7.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/7.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/9.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/9.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/10.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/10.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/11.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/11.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/12.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/12.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/13.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/13.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/14.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/14.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/aesthetic/15.jpg" download><img class="width-300px margin-10px img-zoom-1"src="/assets/img/wallpaper/aesthetic/15.jpg" alt=""></a>
+            </div>
 
 
         </div>
