--- a/wallpaper/other/index.html
+++ b/wallpaper/other/index.html
@@ -9,6 +9,7 @@
     <script src="/assets/js/main.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="icon" href="/assets/img/icon/icon.jpg" type="image/icon type">
 </head>
 <body>
     <div class="main">
