--- a/wallpaper/other/index.html
+++ b/wallpaper/other/index.html
@@ -70,6 +70,24 @@
 
         <div class="content">
             <h1>Other wallpaper</h1>
+
+            <h2>Click to image to download</h2>
+
+            <div class="img-flexbox">
+                <a href="/assets/img/wallpaper/other/1.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/1.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/2.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/2.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/3.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/3.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/4.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/4.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/5.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/5.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/6.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/6.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/7.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/7.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/8.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/8.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/9.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/9.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/10.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/10.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/12.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/12.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/13.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/13.jpg" alt=""></a>
+                <a href="/assets/img/wallpaper/other/14.jpg" download><img class="width-500px margin-10px img-zoom-1" src="/assets/img/wallpaper/other/14.jpg" alt=""></a>
+            </div>
         </div>
 
         <!-- <div class="height-test"></div> -->
