--- a/information/detail/index.html
+++ b/information/detail/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Information-detail</title>
+    <title>Detial information</title>
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="/assets/js/main.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -69,7 +69,7 @@
 
 
         <div class="content width-700px between">
-            <h1>Information-detail</h1>
+            <h1>IDetail information</h1>
             <ul>
                 <li>Tên: Rem</li>
                 <li>Tuổi: 18</li>
